[package]
name = "cep47-tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "=3.0.0", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "=5.0.0", features = ["test-support"] }
casper-execution-engine = "=5.0.0"
casper-types = "=3.0.0"
test-env = { path = "../utils/test-env" }
contract-utils = { path = "../utils/contract-utils" }
hex = "0.4.3"
blake2 = "=0.9.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
