[package]
name = "cep47"
version = "0.2.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "=3.0.0"
casper-types = "=3.0.0"
hex = { version = "0.4.3", default-features = false }
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "cep47-token"
path = "bin/cep47_token.rs"
bench = false
doctest = false
test = false
